finalizado de vdd agr real oficial

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* estilos básicos e estrutura */
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Jost, sans-serif;
     margin: 0;
     padding: 0;
 }
